# mini-ui

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/: minifb.rs  tiny.rs
src/: arena.rs  commands.rs  lib.rs  png.rs  render.rs  ui.rs  xlib.rs
src/cairo/: borrowed.rs  constants.rs  context.rs  device.rs  enums.rs  error.rs  image_surface.rs  matrices.rs  mod.rs  paths.rs  patterns.rs  pdf.rs  ps.rs  quartz_surface.rs  recording_surface.rs  rectangle.rs  rectangle_int.rs  region.rs  stream.rs  surface.rs  surface_macros.rs  surface_png.rs  svg.rs  user_data.rs  utils.rs  win32_surface.rs  xcb.rs
src/cairo/ffi/: gobject.rs  mod.rs
src/cairo/font/: font_extents.rs  font_face.rs  font_options.rs  glyph.rs  mod.rs  scaled_font.rs  text_cluster.rs  text_extents.rs  user_fonts.rs
src/draw/: alpha_runs.rs  blend_mode.rs  blitter.rs  color.rs  edge.rs  edge_builder.rs  edge_clipper.rs  fixed_point.rs  geom.rs  line_clipper.rs  mask.rs  math.rs  mod.rs  painter.rs  path_geometry.rs  pixmap.rs
src/draw/pipeline/: blitter.rs  highp.rs  lowp.rs  mod.rs
src/math/: mod.rs  vec2.rs  vec4.rs
src/path/: dash.rs  f32x2_t.rs  f32x4_t.rs  floating_point.rs  mod.rs  path.rs  path_builder.rs  path_geometry.rs  rect.rs  scalar.rs  size.rs  stroker.rs  transform.rs
src/ui/: bounding_box.rs  color.rs  debug.rs  draw_api.rs  font.rs  frame.rs  id.rs  image.rs  mod.rs  response.rs  spacing.rs  style.rs  textedit.rs  ui.rs
src/window/: icon.rs  key_handler.rs  mod.rs  rate.rs
src/window/os/: mod.rs
src/window/os/posix/: mod.rs  scaler.rs  xcursor.rs  xlib.rs
(+2 files in other folders)
