[package]
name = "mini-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parley = { version = "0.1", default-features = false, features = ["std", "system"] }
skrifa = { version = "0.19", default-features = false, features = ["std"] }
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }
